--- a/Deploy.yaml
+++ b/Deploy.yaml
@@ -1,7 +1,8 @@
-apiVersion: apps/v1
 kind: Deployment
+apiVersion: apps/v1
 metadata:
-  name: repl-app
+  name: repl-deploy
+  namespace: repl
 spec:
   replicas: 2
   selector:
@@ -13,10 +14,10 @@ spec:
         app: repl-app
     spec:
       imagePullSecrets:
-      - name: regcred
+        - name: do-regcred
       containers:
       - name: repl-app
-        image: rajkumar3241/repl:v5
+        image: rajkumar3241/repl:v4
         ports:
         - containerPort: 8080
         resources:
