--- a/Autoscaler.yaml
+++ b/Autoscaler.yaml
@@ -1,12 +1,13 @@
-apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
+apiVersion: autoscaling/v1
 metadata:
     name: repl-autoscaler
+    namespace: repl
 spec:
     minReplicas: 2
-    maxReplicas: 5
+    maxReplicas: 8
     scaleTargetRef:
         apiVersion: apps/v1
         kind: Deployment
-        name: repl-app
+        name: repl-deploy
     targetCPUUtilizationPercentage: 80
